{{$NEXT}}

1.103610  2010-12-27 18:29:05 Europe/London

  * Port to Dist::Zilla

libews-client-perl (0.06) UNRELEASED; urgency=low

  * Add check for no items returned from server - thanks Mike M. 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Mar 2010 21:25:58 +0000

libews-client-perl (0.05) UNRELEASED; urgency=low

  * Added POD note about HTTP BasicAuth - thanks to Darren W. 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 16 Mar 2010 19:48:47 +0000

libews-client-perl (0.04) UNRELEASED; urgency=low

  * Add Contacts retrieval.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 14 Mar 2010 22:59:03 +0000

libews-client-perl (0.03) UNRELEASED; urgency=low

  * Result set is an iterator, add MooseX::Iterator.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 23 Feb 2010 10:48:57 +0000

libews-client-perl (0.02) UNRELEASED; urgency=low

  * Add File::ShareDir dependency.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Feb 2010 21:43:19 +0000

libews-client-perl (0.01) UNRELEASED; urgency=low

  * Initial release on an unsuspecting world.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Feb 2010 19:01:46 +0000